--- a/index.html
+++ b/index.html
@@ -35,9 +35,14 @@
         </header>
 
         <section id="habits-view" class="view active-view">
+            <div id="loading-overlay">
+                <div class="spinner"></div>
+                <div class="loading-text">Loading...</div>
+            </div>
+
             <div class="card transparent-card">
                 <div id="week-header" class="days-row"></div>
-                <div id="habits-list">Loading...</div>
+                <div id="habits-list"></div>
             </div>
         </section>
 
