--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+    <div id="loading-overlay">
+        <div class="spinner"></div>
+        <div class="loading-text">Loading Data...</div>
+    </div>
+
     <div id="sidebar" class="sidebar">
         <div class="profile-section">
             <div class="avatar">AP</div>
@@ -35,11 +40,6 @@
         </header>
 
         <section id="habits-view" class="view active-view">
-            <div id="loading-overlay">
-                <div class="spinner"></div>
-                <div class="loading-text">Loading...</div>
-            </div>
-
             <div class="card transparent-card">
                 <div id="week-header" class="days-row"></div>
                 <div id="habits-list"></div>
@@ -139,7 +139,7 @@
                 <input type="text" id="newHabitName" placeholder="Name (e.g. Read Book)">
                 <div class="input-row">
                     <select id="newHabitFreq">
-                        <option value="Daily">Daily</option>
+                        <option value="Daily" selected>Daily</option>
                         <option value="Weekly">Weekly</option>
                         <option value="Monthly">Monthly</option>
                         <option value="Yearly">Yearly</option>
