--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
                         <option value="all">All Time</option>
                     </select>
                 </div>
-                <div id="health-chart-container" class="chart-container">
-                    </div>
+                <div id="health-chart-container" class="chart-container"></div>
             </div>
         </div>
     </div>
