--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <div id="loading-overlay">
         <div class="spinner"></div>
+        <div class="loading-text">Loading data...</div>
     </div>
 
     <div class="main-container">
@@ -41,7 +42,12 @@
             <div class="card">
                 <input type="text" id="newHabitName" placeholder="Habit Name">
                 <div class="input-row">
-                    <select id="newHabitFreq"><option value="Daily">Daily</option><option value="Weekly">Weekly</option></select>
+                    <select id="newHabitFreq" class="custom-select">
+                        <option value="Daily">Daily</option>
+                        <option value="Weekly">Weekly</option>
+                        <option value="Monthly">Monthly</option>
+                        <option value="Yearly">Yearly</option>
+                    </select>
                     <input type="number" id="newHabitTarget" value="1" placeholder="Target">
                 </div>
                 <button class="btn-primary" onclick="handleAddHabit()">Create</button>
@@ -60,9 +66,11 @@
                 <h3>Edit Details</h3>
                 <input type="text" id="edit-name" placeholder="Name">
                 <div class="input-row">
-                    <select id="edit-freq">
+                    <select id="edit-freq" class="custom-select">
                         <option value="Daily">Daily</option>
                         <option value="Weekly">Weekly</option>
+                        <option value="Monthly">Monthly</option>
+                        <option value="Yearly">Yearly</option>
                     </select>
                     <input type="number" id="edit-target" placeholder="Target">
                 </div>
@@ -94,12 +102,17 @@
             <div style="width:50px"></div>
         </div>
         <div class="modal-content">
-            <div class="card">
-                <h3>Accent Color</h3>
-                <div class="color-picker-wrapper">
-                    <input type="color" id="themeColorPicker" onchange="updateThemeFromPicker(this.value)" style="height:50px; padding:0;">
+            <div class="card settings-card-row">
+                <div class="settings-info">
+                    <h3>Accent Color</h3>
+                    <p>Select a color to update the theme.</p>
                 </div>
-                <p style="color:#666; font-size:12px; margin-top:10px;">Select a color to update the theme.</p>
+                <div class="color-picker-btn">
+                    <svg class="picker-icon" viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                        <path d="M12 3c-4.97 0-9 4.03-9 9s4.03 9 9 9c.83 0 1.5-.67 1.5-1.5 0-.39-.15-.74-.39-1.01-.23-.26-.38-.61-.38-.99 0-.83.67-1.5 1.5-1.5H16c2.76 0 5-2.24 5-5 0-4.42-4.03-8-9-8zm-5.5 9c-.83 0-1.5-.67-1.5-1.5S5.67 9 6.5 9 8 9.67 8 10.5 7.33 12 6.5 12zm3-4C8.67 8 8 7.33 8 6.5S8.67 5 9.5 5s1.5.67 1.5 1.5S10.33 8 9.5 8zm5 0c-.83 0-1.5-.67-1.5-1.5S13.67 5 14.5 5s1.5.67 1.5 1.5S15.33 8 14.5 8zm3 4c-.83 0-1.5-.67-1.5-1.5S16.67 9 17.5 9s1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"/>
+                    </svg>
+                    <input type="color" id="themeColorPicker" onchange="updateThemeFromPicker(this.value)">
+                </div>
             </div>
         </div>
     </div>
